Deployment-App/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: go-app
spec:
  selector:
    app: go-app
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    nodePort: 30010
  type: NodePort
